# ukcrawl

./: .gitignore  Containerfile  README.md  compose.yml  dagster.yaml  pyproject.toml  requirements.txt  workspace.yaml
model/: generate_data.py  train.py
model/pl_data/: datamodule.py  polars_dataset.py
model/pl_module/: class_model.py
reports/: code-snippets.docx  code-snippets.qmd  data-overview.docx  data-overview.qmd  notes.md
reports/_extensions/nrennie/PrettyPDF/: PrettyPDF.tex
reports/figs/: pop_oa.py
src/: __init__.py  jobs.py  partitions.py  resources.py  schedules.py  sensors.py
src/assets/: class.py  process.py  retrieve.py
src/common/: utils.py
src/model/: class_model.py
