[project]
name = "ukcrawl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cjber", email = "cjberragan@gmail.com" }
]
dependencies = [
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "dagster-aws>=0.23.0",
    "dagster-docker>=0.23.0",
    "dagster-postgres>=0.23.0",
    "dask[complete]>=2024.4.1",
    "warcio>=1.7.4",
    "tldextract>=5.1.2",
    "duckdb>=0.10.1",
    "retrying>=1.3.4",
    "datasets>=2.18.0",
    "transformers>=4.39.3",
    "torch>=2.2.2",
    "polars>=0.20.19",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.23.0",
    "sourcery-cli>=1.16.0",
]

[tool.rye.scripts]
requirements = "uv pip compile pyproject.toml -o requirements.txt"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.dagster]
module_name = "src"
