[project]
name = "ukcrawl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cjber", email = "cjberragan@gmail.com" }
]
dependencies = [
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "dagster-aws>=0.23.0",
    "dagster-docker>=0.23.0",
    "dagster-postgres>=0.23.0",
    "dask[complete]>=2024.4.1",
    "warcio>=1.7.4",
    "tldextract>=5.1.2",
    "duckdb>=0.10.1",
    "retrying>=1.3.4",
    "datasets>=2.18.0",
    "transformers[torch]>=4.40.1",
    "torch>=2.2.2",
    "polars>=0.20.19",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.1",
    "evaluate>=0.4.2",
    "scikit-learn>=1.4.2",
    "ipdb>=0.13.13",
    "lightning>=2.2.3",
    "comet-ml>=3.41.0",
    "openai>=1.24.0",
    "geopandas>=0.14.4",
    "matplotlib>=3.9.0",
    "mapclassify>=2.6.1",
    "pyqt6>=6.7.0",
    "seaborn>=0.13.2",
    "jupyterlab>=4.2.1",
]
requires-python = "==3.12.8"

[tool.dagster]
module_name = "src"
